--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 apply plugin: 'java'
+apply plugin: 'application'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
+
+mainClassName = 'gui.GuiCtrl'
 
 repositories {
     mavenCentral()
