--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'de.undercouch:gradle-download-task:0.4'
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'application'
+
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 
@@ -19,4 +29,17 @@ idea.project.ipr {
     withXml { provider ->
         provider.node.appendNode('component', [name: 'uidesigner-configuration']).appendNode('option', [name: 'INSTRUMENT_CLASSES', value: 'false'])
     }
+}
+
+import de.undercouch.gradle.tasks.download.Download
+
+task downloadDb(type: Download) {
+	src 'https://s3-eu-west-1.amazonaws.com/cmcmsuai/paronym-dictionary/db/paronym.zip'
+	dest 'db'
+	onlyIfNewer true
+}
+
+task extractDb(type: Sync, dependsOn: 'downloadDb') {
+    from zipTree('db/paronym.zip')
+    into 'db/paronym'
 }
